src/test/ui/regions/regions-outlives-projection-container-wc.nll.stderr
error: lifetime may not live long enough
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
  --> $DIR/regions-outlives-projection-container-wc.rs:37:12
=======
  --> $DIR/regions-outlives-projection-container-wc.rs:33:12
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |
LL | fn with_assoc<'a,'b>() {
   |               -- -- lifetime `'b` defined here
   |               |
   |               lifetime `'a` defined here
...
LL |     let _: &'a WithAssoc<TheType<'b>> = loop { };
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^ type annotation requires that `'b` must outlive `'a`

error: aborting due to previous error

